[package]
name = "gnss-rs"
version = "2.1.3"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "GNSS constellations and space vehicles support"
homepage = "https://github.com/rtk-rs/gnss"
repository = "https://github.com/rtk-rs/gnss"
keywords = ["gnss", "gps", "glonass", "galileo"]
categories = ["science", "science::geo"]
edition = "2021"
readme = "README.md"

[features]
default = [] # no features by default
sbas = ["geo", "wkt"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[build-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dependencies]
thiserror = "1"
hifitime = { git = "https://github.com/nyx-space/hifitime.git" }
lazy_static = "1.4"
geo = { version = "0.26", optional = true }
wkt = { version = "0.10.0", default-features = false, optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
