[package]
name = "gnss-rs"
version = "2.2.1"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "GNSS constellations and space vehicles support"
homepage = "https://github.com/rtk-rs/gnss"
repository = "https://github.com/rtk-rs/gnss"
keywords = ["gnss", "gps", "glonass", "galileo"]
categories = ["science", "science::geo"]
edition = "2021"
readme = "README.md"

[features]
# no features enabled by default
default = []

# Enable DOMES (IGS station ID) number definition.
domes = []

# Enable COSPAR (Vehicle Launch #ID) definition
cospar = []

# SBAS (GEO) vehicules definitions are built-in this library.
# This feature unlocks the definition of a database  of projected areas covered 
# by SBAS services, all around the globe, in the form of GEO/WKT frames.
sbas = ["geo", "wkt"]

# Enable all features at once
full = [
    "cospar",
    "domes",
    "sbas",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[build-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dependencies]
thiserror = "1"
lazy_static = "1.4"
hifitime = { git = "https://github.com/nyx-space/hifitime", branch = "feat/duration-i128-gh-186" }
geo = { version = "0.26", optional = true }
wkt = { version = "0.10.0", default-features = false, optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
