[package]
name = "gnss-planetary"
version = "1.0.0"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
log = "0.4"
env_logger = "0.11"
anise = "0.4.2"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
